# vidio

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  error.rs  main.rs  main_backup.rs  main_new.rs
src/core/: mod.rs  report.rs  storage.rs  transcript.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
src/tui/components/: input.rs  list.rs  mod.rs  progress.rs  viewer.rs
