[package]
name = "ytranscript"
version = "0.1.0"
edition = "2024"

[dependencies]
yt-transcript-rs = "0.1.8"
tokio = { version = "1.47.1", features = ["full"] }
derive_more = { version = "2.0.1", features = ["full"] }
async-openai = "0.29.3"
ratatui = "0.29.0"
crossterm = "0.29.0"
clap = { version = "4.5.47", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
chrono = { version = "0.4", features = ["serde"] }
html-escape = "0.2.13"
textwrap = "0.16.2"
pulldown-cmark = { version = "0.13.0", default-features = false, features = ["simd"] }
unicode-width = "0.2.0"
