[package]
name = "vidio"
version = "0.1.0"
edition = "2024"

[dependencies]
yt-transcript-rs = "0.1.8"
tokio = { version = "1.49.0", features = ["full"] }
derive_more = { version = "2.1.1", features = ["full"] }
async-openai = { version = "0.32.4", features = ["responses"] }
ratatui = "0.30.0"
crossterm = "0.29.0"
clap = { version = "4.5.58", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.43", features = ["serde"] }
html-escape = "0.2.13"
textwrap = "0.16.2"
pulldown-cmark = { version = "0.13.0", default-features = false, features = ["simd"] }
unicode-width = "0.2.2"
